--- a/week4-6/templates/components/header.html
+++ b/week4-6/templates/components/header.html
@@ -12,7 +12,7 @@
             <a href="#" class="nav-link">
                 <i class="fas fa-history"></i> History
             </a>
-            <a href="#" class="nav-link">
+            <a href="{{ url_for('payment_select') }}" class="sidebar-link">
                 <i class="fas fa-wallet"></i> Payments
             </a>
             <a href="#" class="nav-link">
