--- a/week4-6/templates/rides/home.html
+++ b/week4-6/templates/rides/home.html
@@ -26,10 +26,10 @@
             <a href="{{ url_for('dashboard') }}" class="sidebar-link active">
                 <i class="fas fa-car"></i> Book Ride
             </a>
-            <a href="#" class="sidebar-link">
+            <a href="{{ url_for('ride_history') }}" class="sidebar-link">
                 <i class="fas fa-history"></i> Ride History
             </a>
-            <a href="#" class="sidebar-link">
+            <a href="{{ url_for('payment_select') }}" class="sidebar-link">
                 <i class="fas fa-wallet"></i> Payments
             </a>
             <a href="#" class="sidebar-link">
